module/listener-caps.tf
resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.alb-capstone.arn
  port              = "80"
  protocol          = "HTTP"
  
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target.arn
  }
}
